# orbitIntegrator

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: CPM.cmake  dependencies.cmake
docs/: Doxyfile.in  math_benchmark_corpus.md  math_index.md  math_multistep.md  math_regularization.md  math_runge_kutta.md  math_stiffness.md  math_variational_covariance.md  math_verification.md
examples/: cowell_force_model_example.cpp  regularization_compare_example.cpp  two_body_example.cpp  two_body_uncertainty_example.cpp
include/ode/: algebra.hpp  algebra_adapters.hpp  batch.hpp  chaos.hpp  controller.hpp  dense_events.hpp  drivers.hpp  eigen_api.hpp  error_norm.hpp  integrate_method.hpp  logging.hpp  ode.hpp  poincare.hpp  regularization.hpp  rk_stepper.hpp  sundman.hpp  symplectic.hpp  types.hpp  uncertainty.hpp  variational.hpp
include/ode/multistep/: adams_bashforth_moulton.hpp  adams_high_order.hpp  gauss_jackson8.hpp  nordsieck_abm4.hpp
include/ode/stiff/: diagnostics.hpp  implicit_euler.hpp
include/ode/tableaus/: rk4.hpp  rkf45.hpp  rkf78.hpp
tests/: ode_method_compare_benchmark.cpp  ode_perf_benchmark.cpp  package_install_smoke.cmake  regularization_benchmark.cpp  test_adaptive.cpp  test_algebra_adapters.cpp  test_backward.cpp  test_batch.cpp  test_canonical_systems.cpp  test_chaos_indicators.cpp  test_covariance_math.cpp  test_dense_events.cpp  test_dense_output_accuracy.cpp  test_eigen_api.cpp  test_gauss_jackson.cpp  test_invariant_controller.cpp  test_long_horizon_invariants.cpp  test_multistep.cpp  test_nordsieck.cpp  test_nordsieck_covariance.cpp  test_order.cpp  test_poincare_tools.cpp  test_reference_benchmark_corpus.cpp  test_regularization.cpp  test_regularized_variational.cpp  test_reversibility.cpp  test_richardson.cpp  test_robustness.cpp  test_stability_region.cpp  test_state_array.cpp  test_stiff.cpp  test_stiff_diagnostics.cpp  test_sundman.cpp  test_symplectic.cpp  test_symplectic_advanced.cpp  test_uncertainty.cpp  test_variational.cpp  test_variational_fd_stm.cpp  test_variational_multistep.cpp
tests/package_consumer/: CMakeLists.txt  main.cpp
tools/: profile.sh
